# git-ctx

./: .gitattributes  .gitignore  LICENSE  README.md  git_ctx.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
demo/.git-ctx/: 1.json  2.json  index.json
examples/: .ai-rules.json  README.md
tests/: test_cli.py
