[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "git-ctx"
version = "0.2.0"
description = "Version control for AI context rules — track changes to your .ai-rules.json like Git"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Yiming Zhu", email = "markzhu0609@gmail.com"}
]
keywords = ["ai", "context", "rules", "version-control", "cli", "git-ctx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/z-y-m-123/git-ctx"
Repository = "https://github.com/z-y-m-123/git-ctx"
Issues = "https://github.com/z-y-m-123/git-ctx/issues"

[project.scripts]
git-ctx = "git_ctx:main"

[tool.setuptools]
py-modules = ["git_ctx"]
